# computer_architecture

./: .gitignore  ; Example assembly program for CSEN.txt  CMakeList.txt  CMakeLists.txt  README.md  main.c  test.asm  test.txt
include/: decoder.h  globals.h  instruction_map.h  instructions.h  memory.h  parser.h  pipeline.h  pipelining.h  queue.h  types.h
src/: CSEN.txt  decoder.c  instruction_map.c  instructions.c  main  main.c  memory.c  parser.c  pipeline.c  pipelining.c  queue.c  test.asm
tests/: program1.txt  test0.txt  test1.txt  test10.txt  test11.txt  test2.txt  test3.txt  test5.txt  test6.txt
